# miso

./: .gitignore  LICENSE
cmake/: CMakeLists.txt  build.vs14.cmd  build.vs15.cmd  build.vs15.x64.cmd  generate.vs14.cmd  generate.vs15.cmd  generate.vs15.x64.cmd  make.vs14.cmd  make.vs15.cmd
include/miso/: ipv4.h  ipv6.h  platform.h  utility.h
include/miso/client/: client_interface.h  client_tcp.h
include/miso/dns/: dns.h
include/miso/protocol/: app_protocol.h  app_protocol_simple.h
include/miso/server/: server_interface.h  server_tcp.h  server_udp.h
include/miso/socket/: generic_socket.h  ipv4.h  ipv6.h  socket.h  socketdef.h
src/: app_protocol_simple.cpp  client_tcp.cpp  dns.cpp  generic_socket.cpp  ipv4.cpp  ipv6.cpp  node_tcp.h  platform.cpp  server_tcp.cpp  server_udp.cpp  socket_tools.h  socketdef.cpp
